<resources>
    <string name="app_name">TestProject</string>
    <string name="btn_open_list_text">Пользователи</string>
    <string name="btn_open_video_text">Видеоролик</string>
    <string name="plain_text_username">Пользовательское имя:</string>
    <string name="plain_text_address">Адрес</string>
    <string name="plain_text_lat">N:</string>
    <string name="plain_text_lng">E:</string>
    <string name="plain_text_contacts">Контакты</string>
    <string name="plain_text_web">Сайт:</string>
    <string name="plain_text_company">Место работы</string>
    <string name="plain_text_comp_name">Название:</string>
    <string name="plain_text_comp_catch">Девиз:</string>
    <string name="plain_text_comp_bs">Обязанности:</string>
    <string name="plain_text_id">Id:</string>
    <string name="plain_text_user_main_info">Информация о пользователе</string>
</resources>